# esp-drum-midi-controller

./: .gitignore  Cargo.toml
.cargo/: config.toml
src/: main.rs  tasks.rs  trouble_midi.rs
src/tasks/: ble.rs  gpio.rs
