[package]
name = "esp-drum-midi-controller"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"

[dependencies]
bt-hci = "0.5.0"
defmt = "1.0.1"
embassy-executor = "0.9.1"
embassy-futures = "0.1"
embassy-sync = "0.7.2"
embassy-time = "0.5.0"
esp-alloc = { git = "https://github.com/WataNekko/esp-hal.git", branch = "ble-connector-error-derive-defmt" }
esp-bootloader-esp-idf = { git = "https://github.com/WataNekko/esp-hal.git", branch = "ble-connector-error-derive-defmt", features = [
  "esp32c3",
] }
esp-hal-embassy = { git = "https://github.com/WataNekko/esp-hal.git", branch = "ble-connector-error-derive-defmt", features = [
  "esp32c3",
] }
esp-hal = { git = "https://github.com/WataNekko/esp-hal.git", branch = "ble-connector-error-derive-defmt", features = [
  "defmt",
  "unstable",
  "esp32c3",
] }
esp-println = { git = "https://github.com/WataNekko/esp-hal.git", branch = "ble-connector-error-derive-defmt", features = [
  "defmt-espflash",
  "esp32c3",
] }
esp-preempt = { git = "https://github.com/WataNekko/esp-hal.git", branch = "ble-connector-error-derive-defmt", features = [
  "defmt",
  "esp32c3",
] }
esp-radio = { git = "https://github.com/WataNekko/esp-hal.git", branch = "ble-connector-error-derive-defmt", features = [
  "ble",
  "defmt",
  "unstable",
  "esp32c3",
] }
heapless = "0.9.1"
trouble-host = { version = "0.3.0", features = [
  "default-packet-pool-mtu-255",
  "derive",
  "scan",
  "defmt",
] }
static_cell = "2.1.1"


[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units = 1        # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 3
overflow-checks = false
